🔧 Fix hanging Docker build in GitHub Actions
- Change from multi-platform (linux/amd64,linux/arm64) to single platform (linux/amd64)
- Add 30-minute timeout to prevent infinite hanging
- Multi-platform builds were causing emulation issues and timeouts
- Single platform build is faster and more reliable for initial setup

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -86,6 +86,7 @@ jobs:
   build-and-push:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     needs: [test, security-scan]
     if: github.event_name != 'pull_request'
     steps:
@@ -120,7 +121,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
