🎯 Add demo namespace with sample applications and default filtering
✨ Demo Environment:
- Created 'pod-visualizer-demo' namespace with realistic sample apps:
  • demo-app-frontend (3 replicas) - Nginx frontend
  • demo-app-backend (2 replicas) - Redis cache
  • demo-app-database (1 replica) - PostgreSQL database
- Added services for all demo applications
- Resource limits and health checks for production-like demo

🔧 Default Namespace Support:
- Added DEFAULT_NAMESPACE environment variable support
- Helm chart configurable defaultNamespace value (pod-visualizer-demo)
- Frontend automatically defaults to demo namespace on load
- Smart namespace dropdown that includes default namespace
- Template passes default namespace to frontend via meta tag

📋 Enhanced User Experience:
- Visualizer now defaults to demo namespace for focused view
- Users can still access all namespaces via dropdown
- Contained demo environment for clean demonstrations
- Real-time updates work seamlessly with namespace filtering

🚀 Deployment Automation:
- demo-setup.sh script for one-command demo deployment
- Automated demo app deployment and Pod Visualizer installation
- Health checks and readiness validation
- Comprehensive setup instructions and testing commands

Perfect for demos and showcasing real-time Kubernetes visualization! 🎉

--- a/helm/pod-visualizer/templates/deployment.yaml
+++ b/helm/pod-visualizer/templates/deployment.yaml
@@ -40,6 +40,10 @@ spec:
           env:
             - name: PORT
               value: "{{ .Values.app.port }}"
+            {{- if .Values.app.defaultNamespace }}
+            - name: DEFAULT_NAMESPACE
+              value: "{{ .Values.app.defaultNamespace }}"
+            {{- end }}
           {{- if .Values.healthCheck.enabled }}
           livenessProbe:
             {{- toYaml .Values.healthCheck.livenessProbe | nindent 12 }}
