--- a/helm/pod-visualizer/values.yaml
+++ b/helm/pod-visualizer/values.yaml
@@ -85,6 +85,8 @@ affinity: {}
 app:
   port: 8080
   logLevel: info
+  # Default namespace to filter/display (empty = all namespaces)
+  defaultNamespace: "pod-visualizer-demo"
 
 # Health check configuration
 healthCheck:
