--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -193,12 +193,7 @@ jobs:
         # Push to DockerHub as OCI artifact
         helm push $CHART_FILE oci://${{ env.REGISTRY }}/callmeradical
         
-        # Also push with 'latest' tag for convenience
-        if [[ "${{ github.ref_name }}" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-          # For stable releases, also tag as latest
-          echo "Pushing as latest tag as well..."
-          helm push $CHART_FILE oci://${{ env.REGISTRY }}/callmeradical --version latest
-        fi
+        echo "Successfully pushed Helm chart to DockerHub OCI registry"
 
     - name: Create Release
       uses: actions/create-release@v1
@@ -210,12 +205,12 @@ jobs:
         body: |
           ## Changes in this Release
           - Container image: `${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}`
-          - Helm chart: `oci://${{ env.REGISTRY }}/callmeradical/pod-visualizer:${{ github.ref_name }}`
+          - Helm chart: `oci://${{ env.REGISTRY }}/callmeradical/pod-visualizer:0.1.0`
           
           ## Deployment
           ```bash
           # Using Helm from DockerHub OCI registry
-          helm upgrade --install pod-visualizer oci://${{ env.REGISTRY }}/callmeradical/pod-visualizer --version ${{ github.ref_name }}
+          helm upgrade --install pod-visualizer oci://${{ env.REGISTRY }}/callmeradical/pod-visualizer --version 0.1.0
           
           # Using Helm from attached file
           helm upgrade --install pod-visualizer ./pod-visualizer-*.tgz
