🚀 Add NodePort service support to Helm chart
- Updated service template to conditionally include nodePort field
- Added nodePort configuration option to values.yaml with documentation
- Created values-nodeport.yaml example file for NodePort deployments
- Updated README with NodePort installation options (no port-forward needed)
- Tested both ClusterIP (default) and NodePort configurations
- NodePort enables direct access via http://localhost:30080

--- a/helm/pod-visualizer/values.yaml
+++ b/helm/pod-visualizer/values.yaml
@@ -43,6 +43,7 @@ service:
   type: ClusterIP
   port: 80
   targetPort: 8080
+  # nodePort: 30080  # Uncomment and set when using type: NodePort
 
 ingress:
   enabled: false
