✨ Enhanced NodePort flexibility with random port assignment
- Updated values.yaml documentation to clarify predefined vs random port options
- Created values-nodeport-random.yaml example for random port assignment
- Updated README with both NodePort options (2a: specific port, 2b: random)
- Template logic supports both scenarios:
  * Specify nodePort value = use exact port (30080)
  * Omit nodePort value = Kubernetes assigns random port (30000-32767)
- Added kubectl get service command to check assigned random port

--- a/helm/pod-visualizer/values.yaml
+++ b/helm/pod-visualizer/values.yaml
@@ -43,7 +43,7 @@ service:
   type: ClusterIP
   port: 80
   targetPort: 8080
-  # nodePort: 30080  # Uncomment and set when using type: NodePort
+  # nodePort: 30080  # Specify exact port (30000-32767) or omit for random assignment
 
 ingress:
   enabled: false
